[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.1", features = ["macros", "ws", "form"] }
tower-sessions = "0.14.0"
bcrypt = "0.17.0"
chrono = { version = "0.4.40", features = ["serde"] }
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "chrono"] }
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace", "cors", "fs"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
markdown = "1.0.0-alpha.23"
dotenvy = "0.15.7"
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
schemars = { version = "0.8.22", features = ["chrono"] }
futures = "0.3.31"
askama = "0.14.0"
tower = "0.5.2"
syntect = { version = "5.0", features = ["default-fancy"] }
html-escape = "0.2.13"
clap = { version = "4.5.39", features = ["derive"] }
pathdiff = "0.2.3"
indicatif = "0.17.11"
grass = "0.13.4"
rpassword = "7.4.0"
urlencoding = "2.1.3"
fancy-regex = "0.14.0"
