[package]
name = "backend"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aide = { version = "0.13", features = ["axum", "axum-ws"] }
axum = { version = "0.7", features = ["macros", "ws"] }
bcrypt = "0.15.1"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
futures = "0.3.31"
hex = "0.4.3"
hmac = "0.12.1"
lazy_static = "1.5.0"
markdown = "1.0.0-alpha.21"
rand = "0.8.5"
regex = "1.11.0"
reqwest = { version = "0.12", features = ["json"] }
schemars = { version = "0.8.21", features = ["chrono"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sha2 = "0.10.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tower-sessions = "0.13.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
