[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.9", features = ["macros", "ws"] }
tower-sessions = "0.13.0"
bcrypt = "0.16.0"
chrono = { version = "0.4.38", features = ["serde"] }
rand = "0.8.5"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "chrono"] }
tokio = { version = "1.41.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace", "cors", "fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
markdown = "1.0.0-alpha.21"
lazy_static = "1.5.0"
dotenvy = "0.15.7"
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
aide = { version = "0.13.4", features = ["axum", "axum-ws"] }
schemars = { version = "0.8.21", features = ["chrono"] }
futures = "0.3.31"
